update user login schema
