# app/app/types/login.ts
@@ -1,4 +1,5 @@
 import type { components } from './api';
 
-export type LoginFormData = components['schemas']['LoginFormData'];
+export type LoginFormData =
+  components['schemas']['Body_login_users_login_post'];
 export type LoginResponse = components['schemas']['LoginResponse'];
